# Fluxora-Contracts

./: EVENT_SNAPSHOT_VERIFICATION.md  README.md  pr_description.md
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs
contracts/factory/tests/: factory_setters.rs  factory_stream_e2e.rs
contracts/governance/src/: lib.rs
contracts/stream/: CEI_ANALYSIS.md
contracts/stream/proptest-regressions/: balance_conservation.txt
contracts/stream/src/: accrual.rs  delegation.rs  lib.rs  test.rs  test_issue_39.rs  test_token_edge_cases.rs  test_withdrawable_props.rs
contracts/stream/tests/: adaptive_ttl.rs  adversarial_auth.rs  balance_conservation.rs  batch_recipient_cache.rs  cliff_only_variant.rs  close_guard_paths.rs  create_stream_relative.rs  dust_threshold.rs  event_snapshots_suite.rs  factory_fuzz.rs  factory_policy.rs  formal_verification_smoke.rs  id_reservation.rs  integration_suite.rs  max_rate_per_second.rs  metadata_extension.rs  paused_stream_count.rs  recipient_paged_index.rs  storage_key_compat.rs
docs/: audit.md  dust-threshold.md  error.md  events.md  factory.md  formal-verification.md  gas.md  governance.md  maintainer-security-checklist.md  recipient-stream-index.md  security.md  snapshot-test-coverage-matrix.md  storage.md  streaming.md  test-coverage.md  token-assumptions.md  upgrade.md
wasm/: checksums.sha256
